[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["iku-iku-iku <2548340423@qq.com>"]

build = "build.rs" # LALRPOP preprocessing

# The generated code depends on lalrpop-util.
[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
getset = "0.1.2"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"